[package]
name = "redis-streams"
version = "0.1.0"
edition = "2024"
description = "A Redis-like streams system supporting XADD, XRANGE, XREAD and XLEN operations."
repository = "https://github.com/diksipav/redis-streams"
keywords = ["redis", "streams", "message-queue", "event-sourcing", "time-series"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
